--- a/webscrapprix des joueurs.ipynb
+++ b/webscrapprix des joueurs.ipynb
@@ -67,6 +67,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Récupération des équipes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
@@ -128,15 +135,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(lignes)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [
@@ -155,6 +153,13 @@
     "for colonne in colonnes0:\n",
     "    list0.append(colonne.text)\n",
     "print(list0)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# un essaie pour récupérer un premier tableau"
    ]
   },
   {
@@ -189,13 +194,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -209,6 +207,10 @@
    "outputs": [],
    "source": [
     "def create_table(team,table):\n",
+    "    \"\"\" cette fonction permet de prender un tableau en entrée sous la forme de code html et après\n",
+    "    elle le transforme en un vrai tableau, cette fonction retourne aussi l'état du tableau: \n",
+    "     càd est ce que le tableau est remplie de joueurs arrivant au team ou ce sont des joueurs vendus par le team\n",
+    "       \"\"\"\n",
     "\n",
     "\n",
     "    lignes=table.find_all('tr')\n",
@@ -247,6 +249,13 @@
    "metadata": {},
    "source": [
     "# Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "je vais essayer de récupérer les deux premiers tablaux de la page web à la main  avnt de faire une boucle et récupérer tous les tableaux "
    ]
   },
   {
@@ -537,6 +546,13 @@
    "metadata": {},
    "source": [
     "# Concaténer les différents tableaux"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "là je fais une bouce pour récupérer tous les tableaux de cette page web , après on va les concaténer pour avoir une base de données claires"
    ]
   },
   {
