transform data base en fichier csv

--- a/webscrapprix des joueurs.ipynb
+++ b/webscrapprix des joueurs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "200"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -164,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Declan RiceD. Rice', '24', 'Angleterre', 'Milieu défensif', 'MDC', '100,00 mio. €', 'West Ham United', 'Angleterre', '116,60 mio. €'], ['Kai HavertzK. Havertz', '24', 'Allemagne', 'Milieu offensif', 'MO', '60,00 mio. €', 'Chelsea FC', 'Angleterre', '75,00 mio. €'], ['Jurrien TimberJ. Timber', '22', 'Pays-Bas', 'Défenseur central', 'DC', '42,00 mio. €', 'Ajax Amsterdam', 'Pays-Bas', '40,00 mio. €'], ['David RayaD. Raya', '27', 'Espagne', 'Gardien de but', 'GdB', '32,00 mio. €', 'FC Brentford', 'Angleterre', 'Montant du prêt:3,34 mio. €'], ['Albert Sambi LokongaA. Lokonga', '24', 'Belgique', 'Milieu central', 'MC', '15,00 mio. €', 'Luton Town', 'Angleterre', 'Fin du prêt31 mai 2024'], ['Folarin BalogunF. Balogun', '21', 'États-Unis', 'Avant-centre', 'AC', '30,00 mio. €', 'Stade de Reims', 'France', 'Fin du prêt30 juin 2023'], ['Arthur OkonkwoA. Okonkwo', '22', 'Angleterre', 'Gardien de but', 'GdB', '2,00 mio. €', 'Wrexham AFC', 'Angleterre', 'Fin du prêt31 mai 2024'], ['Pablo MaríP. Marí', '29', 'Espagne', 'Défenseur central', 'DC', '5,00 mio. €', 'AC Monza', 'Italie', 'Fin du prêt30 juin 2023'], ['Rúnar Alex RúnarssonR. Rúnarsson', '28', 'Islande', 'Gardien de but', 'GdB', '1,00 mio. €', 'Alanyaspor', 'Turquie', 'Fin du prêt30 juin 2023'], ['Nicolas PépéN. Pépé', '28', \"Côte d'Ivoire\", 'Ailier droit', 'AiD', '14,00 mio. €', 'OGC Nice', 'France', 'Fin du prêt30 juin 2023'], ['Rúnar Alex RúnarssonR. Rúnarsson', '29', 'Islande', 'Gardien de but', 'GdB', '1,00 mio. €', 'Cardiff City', 'Angleterre', 'Fin du prêt31 mai 2024'], ['Arthur OkonkwoA. Okonkwo', '21', 'Angleterre', 'Gardien de but', 'GdB', '2,00 mio. €', 'SK Sturm Graz', 'Autriche', 'Fin du prêt30 juin 2023'], ['Cédric SoaresC. Soares', '31', 'Portugal', 'Arrière droit', 'ArD', '3,00 mio. €', 'FC Fulham', 'Angleterre', 'Fin du prêt30 juin 2023'], ['Nuno TavaresN. Tavares', '23', 'Portugal', 'Arrière gauche', 'ArG', '18,00 mio. €', 'Olympique de Marseille', 'France', 'Fin du prêt30 juin 2023']]\n"
+      "[['Declan RiceD. Rice', '24', 'Angleterre', 'Milieu défensif', 'MDC', '100,00 mio. €', 'West Ham United', 'Angleterre', '116,60 mio. €'], ['Kai HavertzK. Havertz', '24', 'Allemagne', 'Milieu offensif', 'MO', '60,00 mio. €', 'Chelsea FC', 'Angleterre', '75,00 mio. €'], ['Jurrien TimberJ. Timber', '22', 'Pays-Bas', 'Défenseur central', 'DC', '42,00 mio. €', 'Ajax Amsterdam', 'Pays-Bas', '40,00 mio. €'], ['David RayaD. Raya', '27', 'Espagne', 'Gardien de but', 'GdB', '32,00 mio. €', 'FC Brentford', 'Angleterre', 'Montant du prêt:3,34 mio. €'], ['Albert Sambi LokongaA. Lokonga', '24', 'Belgique', 'Milieu central', 'MC', '15,00 mio. €', 'Luton Town', 'Angleterre', 'Fin du prêt31 mai 2024'], ['Cédric SoaresC. Soares', '31', 'Portugal', 'Arrière droit', 'ArD', '3,00 mio. €', 'FC Fulham', 'Angleterre', 'Fin du prêt30 juin 2023'], ['Arthur OkonkwoA. Okonkwo', '21', 'Angleterre', 'Gardien de but', 'GdB', '2,00 mio. €', 'SK Sturm Graz', 'Autriche', 'Fin du prêt30 juin 2023'], ['Rúnar Alex RúnarssonR. Rúnarsson', '29', 'Islande', 'Gardien de but', 'GdB', '1,00 mio. €', 'Cardiff City', 'Angleterre', 'Fin du prêt31 mai 2024'], ['Nicolas PépéN. Pépé', '28', \"Côte d'Ivoire\", 'Ailier droit', 'AiD', '14,00 mio. €', 'OGC Nice', 'France', 'Fin du prêt30 juin 2023'], ['Rúnar Alex RúnarssonR. Rúnarsson', '28', 'Islande', 'Gardien de but', 'GdB', '1,00 mio. €', 'Alanyaspor', 'Turquie', 'Fin du prêt30 juin 2023'], ['Pablo MaríP. Marí', '29', 'Espagne', 'Défenseur central', 'DC', '5,00 mio. €', 'AC Monza', 'Italie', 'Fin du prêt30 juin 2023'], ['Arthur OkonkwoA. Okonkwo', '22', 'Angleterre', 'Gardien de but', 'GdB', '2,00 mio. €', 'Wrexham AFC', 'Angleterre', 'Fin du prêt31 mai 2024'], ['Folarin BalogunF. Balogun', '21', 'États-Unis', 'Avant-centre', 'AC', '30,00 mio. €', 'Stade de Reims', 'France', 'Fin du prêt30 juin 2023'], ['Nuno TavaresN. Tavares', '23', 'Portugal', 'Arrière gauche', 'ArG', '18,00 mio. €', 'Olympique de Marseille', 'France', 'Fin du prêt30 juin 2023']]\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "4   15,00 mio. €       Luton Town  Angleterre       Fin du prêt31 mai 2024  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,131 +414,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Folarin BalogunF. Balogun</td>\n",
-       "      <td>22</td>\n",
-       "      <td>États-Unis</td>\n",
-       "      <td>Avant-centre</td>\n",
-       "      <td>AC</td>\n",
-       "      <td>30,00 mio. €</td>\n",
-       "      <td>AS Monaco</td>\n",
-       "      <td>France</td>\n",
-       "      <td>30,00 mio. €</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Granit XhakaG. Xhaka</td>\n",
-       "      <td>30</td>\n",
-       "      <td>Suisse</td>\n",
-       "      <td>Milieu défensif</td>\n",
-       "      <td>MDC</td>\n",
-       "      <td>20,00 mio. €</td>\n",
-       "      <td>Bayer 04 Leverkusen</td>\n",
-       "      <td>Allemagne</td>\n",
-       "      <td>15,00 mio. €</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Matt TurnerM. Turner</td>\n",
-       "      <td>29</td>\n",
-       "      <td>États-Unis</td>\n",
-       "      <td>Gardien de but</td>\n",
-       "      <td>GdB</td>\n",
-       "      <td>10,00 mio. €</td>\n",
-       "      <td>Nottingham Forest</td>\n",
-       "      <td>Angleterre</td>\n",
-       "      <td>8,15 mio. €</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Auston TrustyA. Trusty</td>\n",
-       "      <td>24</td>\n",
-       "      <td>États-Unis</td>\n",
-       "      <td>Défenseur central</td>\n",
-       "      <td>DC</td>\n",
-       "      <td>8,00 mio. €</td>\n",
-       "      <td>Sheffield United</td>\n",
-       "      <td>Angleterre</td>\n",
-       "      <td>5,80 mio. €</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Pablo MaríP. Marí</td>\n",
-       "      <td>29</td>\n",
-       "      <td>Espagne</td>\n",
-       "      <td>Défenseur central</td>\n",
-       "      <td>DC</td>\n",
-       "      <td>5,00 mio. €</td>\n",
-       "      <td>AC Monza</td>\n",
-       "      <td>Italie</td>\n",
-       "      <td>4,90 mio. €</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           0   1           2                  3    4  \\\n",
-       "0  Folarin BalogunF. Balogun  22  États-Unis       Avant-centre   AC   \n",
-       "1       Granit XhakaG. Xhaka  30      Suisse    Milieu défensif  MDC   \n",
-       "2       Matt TurnerM. Turner  29  États-Unis     Gardien de but  GdB   \n",
-       "3     Auston TrustyA. Trusty  24  États-Unis  Défenseur central   DC   \n",
-       "4          Pablo MaríP. Marí  29     Espagne  Défenseur central   DC   \n",
-       "\n",
-       "              5                    6           7             8  \n",
-       "0  30,00 mio. €            AS Monaco      France  30,00 mio. €  \n",
-       "1  20,00 mio. €  Bayer 04 Leverkusen   Allemagne  15,00 mio. €  \n",
-       "2  10,00 mio. €    Nottingham Forest  Angleterre   8,15 mio. €  \n",
-       "3   8,00 mio. €     Sheffield United  Angleterre   5,80 mio. €  \n",
-       "4   5,00 mio. €             AC Monza      Italie   4,90 mio. €  "
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "table2=tables[1]\n",
-    "df2=create_table('walu',table2)\n",
-    "df2.head()"
+    "df2=create_table('walu',table2)\n"
    ]
   },
   {
@@ -557,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +711,7 @@
        "[626 rows x 11 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1011,13 +892,22 @@
        "4       Fin du prêt31 mai 2024    Arsenal FC          NaN  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "concatenated_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "concatenated_df.to_csv('premièreleague.csv', index=False)"
    ]
   }
  ],
