add france ligue 1 players

--- a/france_player1.ipynb
+++ b/france_player1.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "4  45,00 mio. €        Bayern Munich  Allemagne  45,00 mio. €  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -427,13 +427,196 @@
        "4  Paris Saint-Germain          NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "concatenated_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nouvelles_colonnes = {\n",
+    "    0: 'Nom',\n",
+    "    1: 'age',\n",
+    "    2:'nationnalité',\n",
+    "    3:'Position',\n",
+    "    4:'res Position',\n",
+    "    5:'valeur marchande',\n",
+    "    6: 'venant de 1',\n",
+    "    7:'venant de 2',\n",
+    "    8: 'montant de la transaction',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "concatenated_df.rename(columns=nouvelles_colonnes, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nom</th>\n",
+       "      <th>age</th>\n",
+       "      <th>nationnalité</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>res Position</th>\n",
+       "      <th>valeur marchande</th>\n",
+       "      <th>venant de 1</th>\n",
+       "      <th>venant de 2</th>\n",
+       "      <th>montant de la transaction</th>\n",
+       "      <th>team_acheteur</th>\n",
+       "      <th>team vendeur</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Randal Kolo MuaniR. Kolo Muani</td>\n",
+       "      <td>24</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Avant-centre</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>80,00 mio. €</td>\n",
+       "      <td>Eintracht Francfort</td>\n",
+       "      <td>Allemagne</td>\n",
+       "      <td>95,00 mio. €</td>\n",
+       "      <td>Paris Saint-Germain</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Manuel UgarteM. Ugarte</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Uruguay</td>\n",
+       "      <td>Milieu défensif</td>\n",
+       "      <td>MDC</td>\n",
+       "      <td>55,00 mio. €</td>\n",
+       "      <td>Sporting CP</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>60,00 mio. €</td>\n",
+       "      <td>Paris Saint-Germain</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ousmane DembéléO. Dembélé</td>\n",
+       "      <td>26</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Ailier droit</td>\n",
+       "      <td>AiD</td>\n",
+       "      <td>60,00 mio. €</td>\n",
+       "      <td>FC Barcelone</td>\n",
+       "      <td>Espagne</td>\n",
+       "      <td>50,00 mio. €</td>\n",
+       "      <td>Paris Saint-Germain</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bradley BarcolaB. Barcola</td>\n",
+       "      <td>20</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Ailier droit</td>\n",
+       "      <td>AiD</td>\n",
+       "      <td>35,00 mio. €</td>\n",
+       "      <td>Olympique Lyonnais</td>\n",
+       "      <td>France</td>\n",
+       "      <td>45,00 mio. €</td>\n",
+       "      <td>Paris Saint-Germain</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lucas HernándezL. Hernández</td>\n",
+       "      <td>27</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Défenseur central</td>\n",
+       "      <td>DC</td>\n",
+       "      <td>45,00 mio. €</td>\n",
+       "      <td>Bayern Munich</td>\n",
+       "      <td>Allemagne</td>\n",
+       "      <td>45,00 mio. €</td>\n",
+       "      <td>Paris Saint-Germain</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              Nom age nationnalité           Position  \\\n",
+       "0  Randal Kolo MuaniR. Kolo Muani  24       France       Avant-centre   \n",
+       "1          Manuel UgarteM. Ugarte  22      Uruguay    Milieu défensif   \n",
+       "2       Ousmane DembéléO. Dembélé  26       France       Ailier droit   \n",
+       "3       Bradley BarcolaB. Barcola  20       France       Ailier droit   \n",
+       "4     Lucas HernándezL. Hernández  27       France  Défenseur central   \n",
+       "\n",
+       "  res Position valeur marchande          venant de 1 venant de 2  \\\n",
+       "0           AC     80,00 mio. €  Eintracht Francfort   Allemagne   \n",
+       "1          MDC     55,00 mio. €          Sporting CP    Portugal   \n",
+       "2          AiD     60,00 mio. €         FC Barcelone     Espagne   \n",
+       "3          AiD     35,00 mio. €   Olympique Lyonnais      France   \n",
+       "4           DC     45,00 mio. €        Bayern Munich   Allemagne   \n",
+       "\n",
+       "  montant de la transaction        team_acheteur team vendeur  \n",
+       "0              95,00 mio. €  Paris Saint-Germain          NaN  \n",
+       "1              60,00 mio. €  Paris Saint-Germain          NaN  \n",
+       "2              50,00 mio. €  Paris Saint-Germain          NaN  \n",
+       "3              45,00 mio. €  Paris Saint-Germain          NaN  \n",
+       "4              45,00 mio. €  Paris Saint-Germain          NaN  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "concatenated_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "concatenated_df.to_csv('franceligue1.csv', index=False)"
    ]
   }
  ],
