--- a/scrapping_all_phones.ipynb
+++ b/scrapping_all_phones.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1- scrapper les références des marques "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -50,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,49 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "marques=page.find(\"div\",class_=\"brandmenu-v2 light l-box clearfix\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<div class=\"brandmenu-v2 light l-box clearfix\">\n",
-       "<p class=\"pad\">\n",
-       "<a class=\"pad-single pad-finder\" href=\"search.php3\">\n",
-       "<i class=\"head-icon icon-search-right\"></i>\n",
-       "<span>Phone finder</span></a>\n",
-       "</p>\n",
-       "<ul>\n",
-       "<li><a href=\"samsung-phones-9.php\">Samsung</a></li><li><a href=\"apple-phones-48.php\">Apple</a></li><li><a href=\"huawei-phones-58.php\">Huawei</a></li><li><a href=\"nokia-phones-1.php\">Nokia</a></li><li><a href=\"sony-phones-7.php\">Sony</a></li><li><a href=\"lg-phones-20.php\">LG</a></li><li><a href=\"htc-phones-45.php\">HTC</a></li><li><a href=\"motorola-phones-4.php\">Motorola</a></li><li><a href=\"lenovo-phones-73.php\">Lenovo</a></li><li><a href=\"xiaomi-phones-80.php\">Xiaomi</a></li><li><a href=\"google-phones-107.php\">Google</a></li><li><a href=\"honor-phones-121.php\">Honor</a></li><li><a href=\"oppo-phones-82.php\">Oppo</a></li><li><a href=\"realme-phones-118.php\">Realme</a></li><li><a href=\"oneplus-phones-95.php\">OnePlus</a></li><li><a href=\"vivo-phones-98.php\">vivo</a></li><li><a href=\"meizu-phones-74.php\">Meizu</a></li><li><a href=\"blackberry-phones-36.php\">BlackBerry</a></li><li><a href=\"asus-phones-46.php\">Asus</a></li><li><a href=\"alcatel-phones-5.php\">Alcatel</a></li><li><a href=\"zte-phones-62.php\">ZTE</a></li><li><a href=\"microsoft-phones-64.php\">Microsoft</a></li><li><a href=\"vodafone-phones-53.php\">Vodafone</a></li><li><a href=\"energizer-phones-106.php\">Energizer</a></li><li><a href=\"cat-phones-89.php\">Cat</a></li><li><a href=\"sharp-phones-23.php\">Sharp</a></li><li><a href=\"micromax-phones-66.php\">Micromax</a></li><li><a href=\"infinix-phones-119.php\">Infinix</a></li><li><a href=\"ulefone_-phones-124.php\">Ulefone</a></li><li><a href=\"tecno-phones-120.php\">Tecno</a></li><li><a href=\"doogee-phones-129.php\">Doogee</a></li><li><a href=\"blackview-phones-116.php\">Blackview</a></li><li><a href=\"cubot-phones-130.php\">Cubot</a></li><li><a href=\"oukitel-phones-132.php\">Oukitel</a></li><li><a href=\"itel-phones-131.php\">Itel</a></li><li><a href=\"tcl-phones-123.php\">TCL</a></li></ul>\n",
-       "<p class=\"pad\">\n",
-       "<a class=\"pad-multiple pad-allbrands\" href=\"makers.php3\">\n",
-       "<i class=\"head-icon icon-mobile-phone231\"></i>\n",
-       "<span>All brands</span>\n",
-       "</a>\n",
-       "<a class=\"pad-multiple pad-rumormill\" href=\"rumored.php3\">\n",
-       "<i class=\"head-icon icon-rumored\"></i>\n",
-       "<span>Rumor mill</span>\n",
-       "</a>\n",
-       "</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "marques"
    ]
   },
   {
@@ -115,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +128,7 @@
        " <li><a href=\"tcl-phones-123.php\">TCL</a></li>]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,14 +238,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "je vais essayer de définir une fonction qui prend en entrée une marque et permet de retourner les caractéristiaues de chaque téléphone de cette marque  "
+    "je vais essayer de définir une fonction qui prend en entrée une marque et permet de retourner les caractéristiques de chaque téléphone de cette marque  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "pour cette raison j'ai besoin de définir ne fonction qui permet à partir d'une marque de retourner la liste des références de téléphones de ctte marque "
+    "pour cette raison j'ai besoin de définir ne fonction qui permet à partir d'une marque de retourner la liste des références de téléphones de cette marque "
    ]
   },
   {
@@ -368,6 +337,13 @@
    ],
    "source": [
     "get_ref_phones_from_brand('apple-phones-48.php')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "la fonction marche bien!"
    ]
   },
   {
