--- a/scrapping_all_phones.ipynb
+++ b/scrapping_all_phones.ipynb
@@ -347,31 +347,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'apple_iphone_15_pro_max-12548.'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a='apple_iphone_15_pro_max-12548.php'\n",
-    "a[:-3]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "définir une fonction qui à partir d'une marque permet de retourner la liste des telephones de cette marque"
+    "définir une fonction qui à partir d'une référence de téléphone permet de retourner une liste de caractéristiques du téléphone "
    ]
   },
   {
@@ -404,6 +383,13 @@
     "        return liste_infos[:7]\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "on va définir une fonction qui permet d'obtenir à partir d'une marque tous les téléphones et leurs caractéristiques , et renvoie une base de donnée des téléphones de cette marque "
    ]
   },
   {
@@ -581,67 +567,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "infos=scrap_telephone(\"samsung_galaxy_tab_a9+-12617.php\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['480 g or 492 g (1.06 lb)',\n",
-       " '5 MP',\n",
-       " '8 MP, AF',\n",
-       " None,\n",
-       " 'Li-Po 7040 mAh, non-removable',\n",
-       " '64GB 4GB RAM, 128GB 8GB RAM',\n",
-       " '1200 x 1920 pixels, 16:10 ratio (~206 ppi density)']"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "infos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['samsung-phones-9.php',\n",
-       " 'apple-phones-48.php',\n",
-       " 'huawei-phones-58.php',\n",
-       " 'nokia-phones-1.php',\n",
-       " 'sony-phones-7.php',\n",
-       " 'lg-phones-20.php',\n",
-       " 'htc-phones-45.php',\n",
-       " 'motorola-phones-4.php',\n",
-       " 'lenovo-phones-73.php',\n",
-       " 'xiaomi-phones-80.php']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_refs[:10]"
+    "on va récupérer les bases de données de toutes les marques et on les concatènes dans une base de données appelée df_final"
    ]
   },
   {
@@ -810,6 +739,13 @@
     "liste_caracteristique= ['weight','cam2modules','cam1modules','price','batdescription1','internalmemory','displayresolution']\n",
     "colonnes=liste_caracteristique+['téléphone']\n",
     "df_final.columns=colonnes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "enregistrer la base de donnée"
    ]
   },
   {
