--- a/scrapping_all_phones.ipynb
+++ b/scrapping_all_phones.ipynb
@@ -238,6 +238,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 2- Scrapper les caractéristiques des téléphones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "je vais essayer de définir une fonction qui prend en entrée une marque et permet de retourner les caractéristiques de chaque téléphone de cette marque  "
    ]
   },
